fixed navbar on wide screen and relative navbar on mobile devices

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -61,9 +61,6 @@ a.btn-reverse {
 }
 
 header {
-    position: fixed;
-    top: 0px;
-    left: 0px;
     width: 100%;
     height: 60px;
     z-index: 2;
@@ -77,4 +74,14 @@ header {
 footer {
     background-color: white;
     border-top: 1px solid rgba(0,0,0,0.1);
+}
+
+@media (min-width: 768px) {
+
+    header {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+    }
+
 }
